back-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  selector:
    app: back-end
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
