front-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: NodePort
